# advent-of-code-2025-rust

./: .gitignore  Cargo.toml  README.md  renovate.json
.forgejo/workflows/: ci.yml  readme-stars.yml
.woodpecker/: build.yaml
data/explanations/: 04.md
src/: lib.rs
src/template/: day.rs
